[gd_scene load_steps=7 format=3 uid="uid://kqhtqhtwgw6e"]

[ext_resource type="Script" path="res://scenes/main/game.gd" id="1_d3ldv"]
[ext_resource type="PackedScene" uid="uid://brpr71os1rsp2" path="res://scenes/characters/memberDisplay.tscn" id="2_ovlne"]
[ext_resource type="Texture2D" uid="uid://nadrnohs4bix" path="res://assets/ui/ui_mainMenuCornerDeco.png" id="3_5yba3"]
[ext_resource type="Theme" uid="uid://ro4pnv2rc2x7" path="res://assets/ui/themes and styleboxes/defaultTheme.tres" id="4_ugx5x"]
[ext_resource type="Texture2D" uid="uid://cfb4k2uyqheub" path="res://assets/ui/ui_moonCounterFrame.png" id="5_bq65i"]
[ext_resource type="Texture2D" uid="uid://hg0or8ccearh" path="res://assets/ui/ui_portraitFrame.png" id="6_prwc4"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 411.0
offset_top = 259.0
offset_right = 451.0
offset_bottom = 299.0
script = ExtResource("1_d3ldv")
metadata/_edit_vertical_guides_ = [-1.0]

[node name="backToMainMenuButton" type="Button" parent="."]
layout_mode = 0
offset_left = -23.0
offset_top = -198.0
offset_right = 114.0
offset_bottom = -149.0
text = "Back to menu"

[node name="openDebugMenu" type="Button" parent="."]
layout_mode = 0
offset_left = 987.0
offset_top = 10.0
offset_right = 1139.0
offset_bottom = 41.0
text = "Open debug menu"

[node name="leaderDisplay" parent="." instance=ExtResource("2_ovlne")]
offset_left = 1136.0
offset_top = -248.0
offset_right = 1136.0
offset_bottom = -248.0

[node name="debugMenu_VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 844.0
offset_top = 69.0
offset_right = 1136.0
offset_bottom = 605.0

[node name="debug_addRandomCat" type="Button" parent="debugMenu_VBoxContainer"]
layout_mode = 2
text = "Add random cat "

[node name="Button" type="Button" parent="debugMenu_VBoxContainer"]
layout_mode = 2
text = "Check can"

[node name="clanView_ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 27.0
offset_top = 234.0
offset_right = 468.0
offset_bottom = 635.0

[node name="clanMembersVBox" type="VBoxContainer" parent="clanView_ScrollContainer"]
layout_direction = 2
layout_mode = 2
theme_override_constants/separation = 150

[node name="ui_mainMenuDeco" type="TextureRect" parent="."]
layout_mode = 1
offset_left = -411.0
offset_top = -259.0
offset_right = -121.0
offset_bottom = -68.0
texture = ExtResource("3_5yba3")

[node name="mainMenu_VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = -385.0
offset_top = -202.0
offset_right = -179.0
offset_bottom = -26.0

[node name="mainMenu_GoBackNoSaveBtn" type="Button" parent="mainMenu_VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_ugx5x")
text = "quit"

[node name="mainMenu_GoBackAndSaveBtn" type="Button" parent="mainMenu_VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_ugx5x")
text = "save and quit"

[node name="moonCounterDeco" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 362.0
offset_top = -259.0
offset_right = 733.0
offset_bottom = -107.0
texture = ExtResource("5_bq65i")

[node name="currentSeasonLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 498.0
offset_top = -176.0
offset_right = 590.0
offset_bottom = -135.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Greenleaf"

[node name="moonCounterLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 460.0
offset_top = -264.0
offset_right = 631.0
offset_bottom = -197.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Moon 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="nextMoonButton" type="Button" parent="."]
layout_mode = 0
offset_left = 727.0
offset_top = -231.0
offset_right = 837.0
offset_bottom = -182.0
text = "Next moon!"

[node name="clanView_uiBox" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -422.0
offset_top = 104.0
offset_right = 342.0
offset_bottom = 796.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_prwc4")
region_rect = Rect2(30.6872, 10.6183, 424.834, 180.999)
patch_margin_left = 64
patch_margin_top = 57
patch_margin_right = 82
patch_margin_bottom = 72
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="clanView_scrollContainer" type="ScrollContainer" parent="clanView_uiBox"]
layout_mode = 0
offset_left = 32.0
offset_top = 72.0
offset_right = 712.0
offset_bottom = 656.0

[node name="GridContainer" type="GridContainer" parent="clanView_uiBox"]
clip_contents = true
layout_direction = 2
layout_mode = 0
offset_left = 33.0
offset_top = 84.0
offset_right = 468.0
offset_bottom = 662.0

[node name="memberDisplay" parent="clanView_uiBox/GridContainer" instance=ExtResource("2_ovlne")]
layout_mode = 2

[node name="clanName_uiBox" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = 185.0
offset_right = 399.0
offset_bottom = 314.0
grow_horizontal = 2
grow_vertical = 2
rotation = 3.14159
texture = ExtResource("6_prwc4")
region_rect = Rect2(30.6872, 10.6183, 424.834, 180.999)
patch_margin_left = 64
patch_margin_top = 57
patch_margin_right = 82
patch_margin_bottom = 72
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="clanName_uiLabel" type="Label" parent="clanName_uiBox"]
layout_mode = 0
offset_left = 353.0
offset_top = 96.0016
offset_right = 673.0
offset_bottom = 154.002
rotation = -3.14159
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 23
text = "Placeholderclan"

[connection signal="pressed" from="backToMainMenuButton" to="." method="on_Game_backToMainMenu_button_pressed"]
[connection signal="pressed" from="openDebugMenu" to="." method="_on_open_debug_menu_pressed"]
[connection signal="pressed" from="debugMenu_VBoxContainer/debug_addRandomCat" to="." method="_on_debug_addRandomCat_button_pressed"]
[connection signal="pressed" from="debugMenu_VBoxContainer/Button" to="." method="_on_debug_checkClan_button_pressed"]
[connection signal="pressed" from="nextMoonButton" to="." method="_on_nextMoonButton_pressed"]
